fixed medium screen layout problems on frontend

--- a/frontend/src/components/Companion/Companion.css
+++ b/frontend/src/components/Companion/Companion.css
@@ -270,6 +270,11 @@
   font-size: 12px;
   font-family: inherit;
 }
+@media screen and (min-width: 1025px) {
+  .cosmetics-container {
+    top: 20%;
+  }
+}
 
 @media screen and (max-width: 768px) {
   .cosmetics-container {
