--- a/frontend/src/components/Faces/Normalface.css
+++ b/frontend/src/components/Faces/Normalface.css
@@ -3,7 +3,7 @@
   width: 20em;
   position: absolute;
   transform: translate(-50%, -50%);
-  top: 30%;
+  top: 60%;
   left: 50%;
   display: flex;
   justify-content: center;
